Don't use an SVGImage's size info if it's being revalidated

The sizing info isn't expected to be available yet, and it might get
used if we layout during revalidation. In that case, when the 
revalidation completes, the intrinisic size won't change, so a
relayout won't happen, which can result in the SVGImage being in a 0x0
parent.

Bug: 747672
Test: http/tests/svg/svgimage-revalidation.html
Change-Id: I1649b67f8f03eae7999f2c461ab1bb64a7cb2d88
Reviewed-on: https://chromium-review.googlesource.com/634131
Commit-Queue: Nate Chapin <japhet@chromium.org>
Reviewed-by: Hiroshige Hayashizaki <hiroshige@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498942}
Former-commit-id: 379d0b2a6c3a03aa61f2eb7c15392ca6d59b4cc2