third_party/WebKit/Source/core/layout/LayoutImage.cpp
@@ -327,8 +327,10 @@ LayoutReplaced* LayoutImage::EmbeddedReplacedContent() const {
     return nullptr;
 
   ImageResourceContent* cached_image = image_resource_->CachedImage();
-  if (cached_image && cached_image->GetImage() &&
-      cached_image->GetImage()->IsSVGImage())
+  // TODO(japhet): This shouldn't need to worry about cache validation.
+  // https://crbug.com/761026
+  if (cached_image && !cached_image->IsCacheValidator() &&
+      cached_image->GetImage() && cached_image->GetImage()->IsSVGImage())
     return ToSVGImage(cached_image->GetImage())->EmbeddedReplacedContent();
 
   return nullptr;
