third_party/WebKit/Source/core/loader/resource/ImageResourceContent.cpp
@@ -626,4 +626,8 @@ const ResourceError& ImageResourceContent::GetResourceError() const {
   return info_->GetResourceError();
 }
 
+bool ImageResourceContent::IsCacheValidator() const {
+  return info_->IsCacheValidator();
+}
+
 }  // namespace blink
